Fix search bar height gap

--- a/frontend/app/styles/templates/application.scss
+++ b/frontend/app/styles/templates/application.scss
@@ -68,7 +68,8 @@
       input {
         background: lighten(gray, 50%);
         border: 0;
-        line-height: 34px;
+	font-size: 16px;
+        line-height: 43px;
         width: 100%;
       }
     }
